hphp/test/slow/attributes/atted_syntax/atted_attribute_no_flag.php.expectf
Fatal error: A semicolon `;` is expected here. in %s/test/slow/attributes/atted_syntax/atted_attribute_no_flag.php on line 4
